# babynina_i_i_oop

babynina_i_i/: CMakeLists.txt  check.txt  prj.cw - Ярлык.lnk
babynina_i_i/CW/lib/: QRBeautify.lib  argParser.lib
babynina_i_i/CW/rtf/: ~$refman.rtf
babynina_i_i/prj.cw/: CMakeLists.txt  build.sh  console.cpp
babynina_i_i/prj.cw/QRBeautify/: CMakeLists.txt  QRBeautify.cpp  QRBeautify.h
babynina_i_i/prj.cw/QRBeautify/qr_generator/: qrcodegen.hpp
babynina_i_i/prj.cw/QRBeautify/rtf/: dir_b21e684b525acb3a5e7eb0bd0c8c6c5e.rtf  refman.rtf
babynina_i_i/prj.lab/: CMakeLists.txt  include - Ярлык.lnk
babynina_i_i/prj.lab/arrayd/: CMakeLists.txt
babynina_i_i/prj.lab/arrayd/include/arrayd/: arrayd.hpp
babynina_i_i/prj.lab/arrayd/src/: arrayd.cpp
babynina_i_i/prj.lab/arrayt/: CMakeLists.txt
babynina_i_i/prj.lab/arrayt/include/arrayt/: arrayt.hpp
babynina_i_i/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
babynina_i_i/prj.lab/matrixs/include/matrixs/: matrixs.hpp
babynina_i_i/prj.lab/orto/: orto.cpp  orto.sln  orto.txt  orto.vcxproj  orto.vcxproj.filters
babynina_i_i/prj.lab/orto/x64/Debug/: vc143.idb
babynina_i_i/prj.lab/orto/x64/Debug/orto.tlog/: orto.lastbuildstate
babynina_i_i/prj.lab/rational/: CMakeLists.txt  rational.cpp
babynina_i_i/prj.lab/rational/include/rational/: rational.hpp
babynina_i_i/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp  rational_test.cpp
babynina_i_i/rational/: CMakeLists.txt  build.bat
babynina_i_i/rational/bin.dbg/: rational_test.ilk
babynina_i_i/rational/prj.test/: rational_test.cpp
